--- a/sample/build.gradle
+++ b/sample/build.gradle
@@ -7,7 +7,7 @@ android {
     compileSdk 32
 
     defaultConfig {
-        applicationId "at.appmonkey.amcalendar"
+        applicationId "at.appmonkey.amcalendarsample"
         minSdk 21
         targetSdk 32
         versionCode 1
